# upmarto

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
agent-blackbox/: .env.example  .insta.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE_FOUNDATION_REPORT.md  docker-compose.yml
agent-blackbox/assets/: README.md
agent-blackbox/branding/: README.md
agent-blackbox/docs/: API_CONTRACT.md  DEPLOYMENT.md  MARKETPLACE_ASSETS.md  MIGRATION.md  PUBLISHING.md  REGISTRY_ONBOARDING.md  RELEASE_METADATA_INVENTORY.md  SDK.md  USER_GUIDE.md
agent-blackbox/screenshots/: README.md
agent-blackbox/scripts/: chaos_step2.ps1  fresh_machine_rc.ps1  multi_client_stress.ps1  set-sdk-dependency.mjs  validate_sdk_stability.mjs  validate_session_ids.mjs  verify-registries.mjs  verify-registries.ps1  verify-registries.sh
agent-blackbox/src/: lib.rs  main.rs
agent-blackbox/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
agent-blackbox/src/config/: mod.rs  settings.rs
agent-blackbox/src/core/: event.rs  mod.rs  project.rs  session.rs  types.rs
agent-blackbox/src/product/: contract.rs  mod.rs  views.rs
agent-blackbox/src/reasoning/: analyzer.rs  mod.rs  patterns.rs  why_engine.rs
agent-blackbox/src/replay/: mod.rs  replay_engine.rs
agent-blackbox/src/services/: event_service.rs  explain_service.rs  mod.rs  session_service.rs  timeline_service.rs
agent-blackbox/src/storage/: file_store.rs  integrity_check.rs  mod.rs  repository.rs  sqlite_store.rs
agent-blackbox/src/utils/: json.rs  time.rs
agent-blackbox/tests/: e2e.rs  failure.rs  integration.rs  load.rs  scenarios.rs
agent-blackbox/tests/common/: mod.rs  server.rs
agent-blackbox/tests/e2e/: cli_behavior.rs  recovery.rs
agent-blackbox/tests/failure/: backend_down.rs  network_timeout.rs  partial_failure.rs  queue_integrity.rs
agent-blackbox/tests/integration/: api.rs
agent-blackbox/tests/load/: concurrent_events.rs  test_1000_events.rs
agent-blackbox/tests/reliability/: common.rs
agent-blackbox/tests/scenarios/: bug_fix_loop.rs  feature_development.rs  regression_fix.rs
agent-blackbox/ui/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
agent-blackbox/ui/src/: main.tsx  vite-env.d.ts
agent-blackbox/upmarto-cli/: Cargo.toml  README.md
agent-blackbox/upmarto-cli/src/: main.rs
agent-blackbox/upmarto-cursor/: README.md  hooks.json  package-lock.json  package.json
agent-blackbox/upmarto-cursor/src/: event_tracker.ts  hook.ts
agent-blackbox/upmarto-sdk-rust/: Cargo.toml  README.md
agent-blackbox/upmarto-sdk-rust/src/: bootstrap.rs  client.rs  config.rs  error.rs  lib.rs  session.rs  types.rs
agent-blackbox/upmarto-sdk-ts/: README.md  package-lock.json  package.json
agent-blackbox/upmarto-sdk-ts/src/: bootstrap.ts  client.ts  config.ts  index.ts  queue_helpers.ts  session.ts  types.ts
agent-blackbox/upmarto-vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
agent-blackbox/upmarto-vscode/src/: utils.ts  (+2 more)
(+28 files in other folders)
