[package]
name = "upmarto-cli"
version = "0.1.0"
edition = "2021"
authors = ["Upmarto Contributors"]
description = "Upmarto CLI — init, track, workflow, session, explain"
license = "MIT"
license-file = "../LICENSE"
readme = "README.md"
repository = "https://github.com/mertcaliskanlinux/upmarto"
homepage = "https://github.com/mertcaliskanlinux/upmarto"
documentation = "https://github.com/mertcaliskanlinux/upmarto/blob/main/agent-blackbox/docs/SDK.md"
keywords = ["ai", "agents", "cli", "debugging", "upmarto"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "upmarto-cli"
path = "src/main.rs"

[dependencies]
upmarto-sdk = { path = "../upmarto-sdk-rust", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
