[package]
name = "upmarto-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Upmarto Contributors"]
description = "Upmarto Rust SDK — v1 API client for AI agent event capture"
license = "MIT"
license-file = "../LICENSE"
readme = "README.md"
repository = "https://github.com/mertcaliskanlinux/upmarto"
homepage = "https://github.com/mertcaliskanlinux/upmarto"
documentation = "https://github.com/mertcaliskanlinux/upmarto/blob/main/agent-blackbox/docs/SDK.md"
keywords = ["ai", "agents", "debugging", "events", "timeline"]
categories = ["development-tools", "api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["sync", "time", "fs", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
sha2 = "0.10"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
